--- a/week-2/index.html
+++ b/week-2/index.html
@@ -1,3 +1,27 @@
 <!DOCTYPE html>
-<html lang="en-us"
+<html lang="en-us">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Eunice Martinez</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+    </head>
+    
+    <body>
+        <header class="header">
+            <h1>Eunice Damaris <span class="mtz">Martinez-Gonzalez</span></h1>
+            <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            </nav>
+
+            <footer>
+                <span>Thanks for visiting!</span>
+            </footer>
+    </body>
+</html>
