--- a/index.html
+++ b/index.html
@@ -19,30 +19,48 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             </nav>
-        <main>
+        </header>   
+        <section class="landing"></section>
+        <section class="body"class="row"class="column"class="grid">
+            <section class="card">
+                <article class="about-me-style"></article>
+                <h2>about me</h2>
+                <p>lorem ipsum</p>
+            </section>
             <section class="card">
                 <header>Project 1</header>
-                <img src="./assets/images/place-holder-img.jpg" alt="image-holder" />
+                <img src="./assets/img/place-holder-img.jpg" alt="image-holder" />
                 <p>description</p>
             </section>
             <section class="card">
                 <header>Project 2</header>
-                <img src="./assets/images/place-holder-img.jpg" alt="image-holder" />
+                <img src="./assets/img/place-holder-img.jpg" alt="image-holder" />
                 <p>description</p>
             </section>
             <section class="card">
                 <header>Project 3</header>
-                <img src="./assets/images/place-holder-img.jpg" alt="image-holder" />
+                <img src="./assets/img/place-holder-img.jpg" alt="image-holder" />
                 <p>descriptiom</p>
             </section>
             <section class="card">
                 <header>Project 4</header>
-                <img src="./assets/images/place-holder-img.jpg" alt="image-holder" />
+                <img src="./assets/img/place-holder-img.jpg" alt="image-holder" />
                 <p>descriptiom</p>
             </section>
-        </main>
+        <aside class="contact-info">
+            <article class="contact-info-style">
+                <h3>contact me</h3>
+                <li>website</li>
+                <li>email</li>
+                <li>github</li>
+                <li>phone</li>
+            </article>
+            
+
+        </aside> 
+        </section>
             <footer class="footer">
-                <span>Thanks for visiting!</span>
+                <p>Thanks for visiting!</p>
             </footer>
     </body>
 </html>
