--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>   
         <section class="landing"></section>
         <section class="body"class="row"class="column"class="grid">
-            <section class="card">
+            <section class="card-aboutme">
                 <article class="about-me-style"></article>
                 <h2>about me</h2>
                 <p>lorem ipsum</p>
@@ -47,7 +47,7 @@
                 <img src="./assets/img/place-holder-img.jpg" alt="image-holder" />
                 <p>descriptiom</p>
             </section>
-        <aside class="contact-info">
+        <aside class="contact-info" class="card"></aside>
             <article class="contact-info-style">
                 <h3>contact me</h3>
                 <li>website</li>
